WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310905
Fix StaticRange::computeValidity() for collapsed ranges
https://bugs.webkit.org/show_bug.cgi?id=310905
Summary
Fix StaticRange::computeValidity() for collapsed ranges
Anne van Kesteren
Reported
2026-03-27 09:40:48 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2026-03-27 09:42:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61505
EWS
Comment 2
2026-03-28 09:05:01 PDT
Committed
310159@main
(cf0468947fe5): <
https://commits.webkit.org/310159@main
> Reviewed commits have been landed. Closing PR #61505 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-28 09:05:12 PDT
<
rdar://problem/173590961
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug