Fix StaticRange::computeValidity() for collapsed and disconnected ranges https://bugs.webkit.org/show_bug.cgi?id=310905

Reviewed by Chris Dumez.

The only consumer (highlights) treats invalid and collapsed ranges the
same way so testing this with an API test.

The change to connectedInSameTreeScope() is correct for VisiblePosition
as well as it doesn't want disconnected nodes to count as connected
either.

Canonical link: https://commits.webkit.org/310159@main