Source/WebCore/dom/StaticRange.cpp
@@ -84,7 +84,7 @@ bool StaticRange::computeValidity() const
     if (endOffset() > endContainer->length())
         return false;
     if (startContainer.ptr() == endContainer.ptr())
-        return endOffset() > startOffset();
+        return endOffset() >= startOffset();
     if (!connectedInSameTreeScope(&startContainer->rootNode(), &endContainer->rootNode()))
         return false;
     return !is_gt(treeOrder<ComposedTree>(startContainer, endContainer));
